# essesion

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  biome.json  docker-compose.yml  mise.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json
.codex/: config.toml
apps/api/: pyproject.toml
apps/api/scripts/: bootstrap_admin.py  export_openapi.py  seed.py
apps/api/src/api/: config.py  db.py  deps.py  errors.py  main.py  numbering.py  pricing.py  schemas.py  security.py
apps/api/tests/: authz.py  conftest.py  factories.py  test_admin_acceptance_fixture.py  test_admin_authoring.py  test_admin_bootstrap.py  test_admin_domain.py  test_admin_generation.py  test_admin_hardening.py  test_admin_management.py  test_admin_manual_orders.py  test_admin_orders.py  test_admin_phase_d.py  test_admin_products.py  test_admin_query_plans.py  test_admin_quotes_inquiries.py  test_app.py  test_auth.py  test_authz.py  test_batch.py  test_cart.py  test_claims.py  test_config.py  test_contract.py  test_design.py  test_finalize_quota.py  test_gcs.py  test_gcs_emulator.py  test_health.py  test_images.py  test_inquiries.py  test_local_storage.py  test_order_claim_locking.py  test_order_image_security.py  test_orders_create.py  test_payments.py  test_products.py  test_quotes.py  test_reform.py  test_repair_shipping.py  (+5 more)
apps/worker/: pyproject.toml
apps/worker/scripts/: authoring_prompts.json  backfill_motif_embeddings.py  build_authoring_examples.py  eval_authoring.py  gallery_eval_prompts.json  index_motif_embeddings.py  seed_motifs.py  sync_authoring_examples.py
apps/worker/src/worker/: config.py  db.py  integrations.py  main.py
apps/worker/tests/: conftest.py  golden_helpers.py  intent_helpers.py  seam_helpers.py  test_adapters.py  test_api_generate.py  test_api_motifs.py  test_authoring_eval.py  test_authoring_promotion.py  test_authoring_store.py  test_authoring_v3.py  test_config.py  test_constraints.py  test_engine.py  test_engine_edges.py  test_fabric.py  test_finalize_jobs.py  test_generation_logging.py  test_geometry.py  test_health.py  test_integrations.py  test_local_object_store.py  test_motif_normalize.py  test_motif_parity.py  test_motif_processing.py  test_motif_resolver.py  test_motif_store.py  test_object_store.py  test_raster.py  test_sanitize.py  test_seam.py  test_validate.py
apps/worker/tests/golden/: candidates.json  motifs.json
db/: MAPPING.md  README.md  alembic.ini  pyproject.toml
db/migrations/: env.py
db/migrations/versions/: 20260706_a658f96021f4_baseline.py  20260710_7ccfddf4b16e_reform_upload_staging.py  20260711_b0db3ad0771c_order_shipping_address_snapshot.py  20260712_4c8f6a1e2b3d_refresh_token_session_kind.py  20260712_e93a2f71c4d5_admin_operational_safety.py  20260712_f18a6c2d9b40_seamless_reference_image_relation.py  20260713_9b7e5d3c1a20_phone_verification_attempts.py  20260713_d4e7f1a2b3c6_user_deletion_retention_anchor.py  20260715_90f1f66cc27b_manual_orders.py  20260716_59ce27fcae11_add_public_inquiries.py  20260716_eaac110cb362_add_reviews.py  20260717_c7d2e94a5b18_backfill_order_item_product_snapshot.py  20260718_2c0b39f58ea3_review_photos.py  20260718_b852f8135ae2_generation_job_canceled_status.py  20260719_a31b5c7d9e02_design_attachments_user_motifs.py  20260719_c4d1a9f27e83_finalize_quota_window.py  20260719_d4e6f8a102b3_design_reference_purpose.py  20260719_e7f9a1b2c3d4_reconcile_finalize_quota_index.py  20260721_f1a2b3c4d5e6_add_generation_diagnostics.py  20260722_9b7c6d5e4f3a_add_vertex_motif_embedding.py  20260722_c3d4e5f6a7b8_authoring_examples.py  20260722_d4e5f6a7b8c9_authoring_promotion_pipeline.py  20260722_dadd999bf858_baseline.py
db/scripts/: migrate_data.py
db/src/db/: testing.py
db/src/db/models/: __init__.py  auth.py  base.py  commerce.py  design.py  images.py  seamless.py  tokens.py
libs/obs/: pyproject.toml
libs/obs/src/obs/: __init__.py
libs/obs/tests/: test_obs.py
libs/svg-safety/: pyproject.toml
libs/svg-safety/src/svg_safety/: __init__.py
libs/svg-safety/tests/: test_svg_safety.py
(+667 files in other folders)
