[project]
name = "essesion-db"
version = "0.1.0"
description = "스키마 단일 소유처 — SQLAlchemy 모델 + Alembic 마이그레이션"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "pgvector>=0.3",
]

[dependency-groups]
dev = ["pytest>=8", "testcontainers[postgres]>=4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db"]
