[project]
name = "essesion-api"
version = "0.1.0"
description = "코어 API — Auth·인가·전 도메인 비즈니스 로직·결제·과금 (Cloud Run)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "essesion-obs",
    "essesion-db",
    "pydantic-settings>=2.6",
    "pyjwt>=2.9",
    "pwdlib[argon2]>=0.2",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "httpx>=0.28",
    "google-cloud-storage>=2.18",
    "google-auth>=2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "schemathesis>=4",
]

[tool.uv.sources]
essesion-obs = { workspace = true }
essesion-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
