[project]
name = "essesion-worker"
version = "0.1.0"
description = "이미지 생성 워커 — 한 코드베이스, generate/finalize 두 서비스로 배포 (ARCHITECTURE §2·§7)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "essesion-obs",
    "essesion-db",
    "essesion-svg-safety",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "google-cloud-storage>=2.18",
    "google-genai>=1.25,<2",
    "pillow>=11",
    "fonttools>=4.59,<5",
    "vtracer>=0.6,<0.7",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
essesion-obs = { workspace = true }
essesion-db = { workspace = true }
essesion-svg-safety = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
